--- a/design/README
+++ b/design/README
@@ -1,1 +1,1 @@
-diagrams
+![alt text] (https://github.com/99003578/mahavira_team1_calculator/blob/main/design/Use%20Case%20Diagram%20of%20Nth%20power-page0001.jpg)
